# Final_Year_Project

./: .env  .env.example  .gitignore  COMPLETE_DEPLOYMENT_GUIDE.md  PROFILE_FEATURES_IMPLEMENTATION.md  README.md  SECURITY.md  SEPOLIA_DEPLOYMENT.md  TESTING_RESULTS.md  get_wallet_info.py
Contacts/: README.md  deploy_commands.md  moccasin.toml  pyproject.toml  test_sepolia_connection.py
Contacts/contracts/: AgriChain.vy
Contacts/script/: deploy.py  deploy_sepolia.py
Contacts/src/: AgriChain.vy
Contacts/tests/: conftest.py  test_agrichain.py
backend_api/: .env  .env.example  .env.sepolia  db.sqlite3  deploy_contract.py  main.py  manage.py  pyproject.toml  requirements.txt
backend_api/agrichain_api/: asgi.py  settings.py  urls.py  wsgi.py
backend_api/blockchain/: AgriChain.json  models.py  services.py
backend_api/blockchain/migrations/: 0001_initial.py
backend_api/produce/: models.py  serializers.py  urls.py  views.py
backend_api/produce/management/commands/: normalize_farmer_address.py  print_farmer_addresses.py
backend_api/produce/migrations/: 0001_initial.py
backend_api/users/: models.py  serializers.py  urls.py  views.py
backend_api/users/migrations/: 0001_initial.py  0002_certification_transactionhistory_and_more.py
design/: DESIGN_REFERENCE.md
frontend/: .env.example  .env.sepolia  App.js  METAMASK_SETUP.md  app.json  package-lock.json  package.json
frontend/src/: theme.js
frontend/src/components/: WalletConnect.js
frontend/src/config/: networks.js
touch-test/: App.js  app.json  package-lock.json  package.json
(+13 files in other folders)
